https://github.com/Jordan-Frias/ti2031-2024.git

--- a/Evaluaciones/Sumativa2/index.html
+++ b/Evaluaciones/Sumativa2/index.html
@@ -3,11 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INACAP LUDI</title>
+    <title>INACAP LUDI</title> 
+    <link rel="icon" href="incapaz.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>Bienvenidos a INACAP</h1>
-    <p>INACAP es una institución formativa con 57 años de trayectoria en Chile. Ofrecemos programas técnicos y profesionales a través del Centro de Formación Técnica INACAP y el Instituto Profesional INACAP.</p>
-    <p>¡Explora nuestras opciones de estudio y descubre todo lo que INACAP tiene para ofrecer!</p>
+    <h1>Bienvenidos a INACAP Ludi</h1>
+    <p>"INACAPLudi" es el club oficial de juegos de mesa y de rol de INACAP, autorizado por la DAE a nivel nacional.
+     Nos dedicamos a reunir a estudiantes y entusiastas de todas las sedes para compartir nuestra pasión por los juegos, la estrategia
+      y la creatividad.</p>
+
+    <h2>Actividades Principales</h2>
+    <ul>
+        <li>Espacios en cada una de las sedes para realizar partidas, de cualquier tipo de juego, en horarios hábiles.</li>
+        <li>Ludoteca, lugar donde hemos podido reunir diferentes juegos y libros, que cada socio puede solicitar para usarse en la sede.</li>
+        <li>Eventos por sede en donde podemos reunirnos como club y poder jugar libremente durante una jornada extraprogramática.</li>
+        <li>Eventos inter-sedes, ya sea regionales o nacionales, en donde contamos con la participación de cada uno de los clubes
+             (un evento al año que comienza el viernes y termina el sábado por la noche).</li>
+        <li>Charlas y talleres para toda la comunidad inacapina para que nos conozcan y aprendan estas prácticas sociales.</li>
+    </ul>
+
+    <p>En los eventos tanto locales como intersede, se invita a la comunidad inacapina a participar a través de una “entrada” que le da derecho a una
+         cantidad de partidas gratuitas. Además, hay tiendas invitadas en donde se ofrecen productos asociados a juegos de mesa y de rol.
+         <br>Somos un espacio inclusivo y diverso donde todos son bienvenidos a sumergirse en la emoción y la camaradería que los juegos de mesa y de rol pueden ofrecer.
+    </p>
+
+    <h2>Juegos de Cartas</h2>
+
+    <div class="carta">
+        <h3>Uno</h3>
+        <p>El clásico juego de cartas donde el objetivo es deshacerte de todas tus cartas.</p>
+        <img src="imagenes/uno.jpg" alt="Uno">
+    </div> 
+
+    <div class="carta">
+        <h3>Cartas españolas</h3>
+        <p>Juego de cartas tradicional español que incluye juegos como la brisca o el mus.</p>
+        <img src="imagenes/españolas.jpg" alt="Cartas españolas">
+    </div>
+
+    <div class="carta">
+        <h3>Cartas inglesas</h3>
+        <p>Conjunto de juegos de cartas populares en países de habla inglesa como el póker o el bridge.</p>
+        <img src="imagenes/inglesas.jpg" alt="Cartas inglesas">
+    </div>
+
+    <link rel="stylesheet" href="style.css">
+    <script src="form.js"></script>
 </body>
 </html>
