https://github.com/Jordan-Frias/ti2031-2024.git

--- a/Evaluaciones/Sumativa2/index.html
+++ b/Evaluaciones/Sumativa2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INACAP LUDI</title> 
     <link rel="icon" href="incapaz.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Jersey+10&family=Jersey+25&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Bienvenidos a INACAP Ludi</h1>
@@ -47,7 +48,28 @@
         <img src="imagenes/inglesas.jpg" alt="Cartas inglesas">
     </div>
 
+    <h2>Juegos de Rol</h2>
+
+    <div class="carta">
+        <h3>Catan</h3>
+        <p>Los jugadores representan colonos que intentan construir y desarrollar asentamientos mientras comercian y adquieren recursos..</p>
+        <img src="imagenes/catan.jpg" alt="Uno">
+    </div> 
+
+    <div class="carta">
+        <h3>Risk</h3>
+        <p> Los jugadores controlan ejércitos y tratan de capturar territorios de otros jugadores mediante tiradas de dados.</p>
+        <img src="imagenes/risk.jpg" alt="Cartas españolas">
+    </div>
+
+    <div class="carta">
+        <h3>Zombicide</h3>
+        <p>Los jugadores crean sus propios supervivientes desde cero o eligen personajes pregenerados y deben enfrentarse a hordas de zombis.</p>
+        <img src="imagenes/zombicide.jpg" alt="Cartas inglesas">
+    </div>
+
     <link rel="stylesheet" href="style.css">
     <script src="form.js"></script>
+    <div class="pixel"></div>
 </body>
 </html>
